--- a/index.html
+++ b/index.html
@@ -15,8 +15,20 @@
         <div id="header">
             <h2 id="header_title">全球根镜像展示</h2>
         </div>
+        <div id="panel_ping_result">
+          <div class="list-wrpaaer">
+             <ul class="list-aggregate" id="marquee-vertical">
+             </ul>
+          </div>
+        </div>
+        <div id="panel_show_something">
+
+        </div>
         <div id="RootServerMap"></div>
     </div>
+    <script src ="/lib/jquery.min.js" type="text/javascript"></script>
+    <script src ="/lib/jquery.easing.js" type="text/javascript"></script>
+    <script src="/lib/jquery_marquee.js" type="text/javascript"></script>
     <script src="/js/common.js" type="text/javascript"></script>
     <script src="/js/root.js" type="text/javascript"></script>
     <script type="text/javascript">
@@ -40,5 +52,6 @@
     <script id="__bs_script__">//<![CDATA[
     document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.17.2'><\/script>".replace("HOST", location.hostname));
 //]]></script>
+
 </body>
 </html>
