add animate support

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="/lib/topojson.min.js"></script>
     <script src="/lib/lodash.min.js"></script>
     <script src="/lib/queue.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="/stylesheets/animate.css"/>
     <link rel="stylesheet" type="text/css" href="/stylesheets/main.css"/>
 </head>
 <body>
@@ -21,7 +22,7 @@
             <button onclick="SelectChinaButton()">China</button>
         </div>
         </div>
-        <div id="panel_ping_result">
+        <div id="panel_ping_result" class="">
           <div class="list-wrpaaer">
              <ul class="list-aggregate" id="marquee-vertical">
              </ul>
